# genetic-algorithm

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/algorithms/: crossover.cpp  crossover.h  fitness.cpp  fitness.h  ga.cpp  ga.h  individual.h  mutation.cpp  mutation.h  population.h  selection.cpp  selection.h
src/ga/: crossover.h  fitness.cpp  fitness.h  individual.cpp  individual.h  mutation.cpp  mutation.h  population.cpp  population.h  selection.cpp  selection.h
src/tools/: config.cpp  config.h  tools.cpp  tools.h
